--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" type="text/css" href="css/animate.css">
         <link rel="stylesheet" type="text/css" href="css/slick.css">
         <link rel="stylesheet" type="text/css" href="css/flaticon.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/wowjs@1.1.3/css/libs/animate.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/wowjs@1.1.3/dist/wow.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/settings.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="css/style.css" >
@@ -152,9 +154,9 @@
                             <div class="testmonial">
                                 <div class="singleTestm">
                                     <div class="teamDeg">
-                                        <h4 class="magenta">Who We Are</h4>
+                                        <h4 class="magenta wow slideInUp" data-wow-duration="0.5s" data-wow-delay="1s">Who We Are</h4>
                                     </div>
-                                    <p>
+                                    <p class="wow slideInUp fade" data-wow-duration="0.5s" data-wow-delay="1s">
                                         Welcome to MKAB, your dedicated partner for all your AC maintenance needs. As a premier service provider in the industry, 
                                         We pride ourselves on delivering top-notch solutions and exceptional customer experiences 
                                     </p>
@@ -498,6 +500,23 @@
         <script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
         <script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
         <script type="text/javascript" src="js/theme.js"></script>
+        <script>
+var wow = new WOW(
+  {
+    boxClass:     'wow',      // animated element css class (default is wow)
+    animateClass: 'animated', // animation css class (default is animated)
+    offset:       0,          // distance to the element when triggering the animation (default is 0)
+    mobile:       true,       // trigger animations on mobile devices (default is true)
+    live:         true,       // act on asynchronously loaded content (default is true)
+    callback:     function(box) {
+      // the callback is fired every time an animation is started
+      // the argument that is passed in is the DOM node being animated
+    },
+    scrollContainer: null // optional scroll container selector, otherwise use window
+  }
+);
+wow.init();
+        </script>
     </body>
 </html>
 
