--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                             <div class="testmonial">
                                 <div class="singleTestm">
                                     <div class="teamDeg">
-                                        <h4 class="magenta wow slideInUp" data-wow-duration="0.5s" data-wow-delay="1s">Who We Are</h4>
+                                        <h4 class="magenta wow slideInUp" data-wow-duration="0.5s">Who We Are</h4>
                                     </div>
-                                    <p class="wow slideInUp fade" data-wow-duration="0.5s" data-wow-delay="1s">
+                                    <p class="wow slideInUp" data-wow-duration="0.5s">
                                         Welcome to MKAB, your dedicated partner for all your AC maintenance needs. As a premier service provider in the industry, 
                                         We pride ourselves on delivering top-notch solutions and exceptional customer experiences 
                                     </p>
@@ -176,7 +176,7 @@
         <!--ABOUT START-->
         <section class="about about2" id="about">
             <div class="abBigtitle home_page2">
-                <h1 class="lead">Our Strategy</h1>
+                <h1 class="lead wow slideInUp" data-wow-duration="0.5s">Our Strategy</h1>
             </div>
             <div class="aboutBottom home_page2">
                 <div class="container">
@@ -185,7 +185,7 @@
                             <div class="abcontentB noPadding">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <h3 class="light text-center">
+                                        <h3 class="light text-center wow slideInUp" data-wow-duration="0.5s">
                                             The Service Strategy mainly depends on the technical inspection and issuing a report on the status of the devices, 
                                             and then starting the service work and improving the performance of the devices.
                                         </h3>
@@ -196,10 +196,11 @@
                     </div>
                 </div>
             </div>
-            <div class="ourServices">
+            <div class="ourServices wow slideInUp" data-wow-duration="0.5s">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div id="slider2">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/1.png" alt="">
@@ -207,7 +208,7 @@
                                 <h6 class="lead text-uppercase bold">Expert Team</h6>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/2.png" alt="">
@@ -215,7 +216,7 @@
                                 <h6 class="lead text-uppercase bold">Tailored Solution</h6>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/3.png" alt="">
@@ -223,7 +224,7 @@
                                 <h6 class="lead text-uppercase bold">Professional Work </h6>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/4.png" alt="">
@@ -231,7 +232,7 @@
                                 <h6 class="lead text-uppercase bold">Timely Fast Service </h6>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/5.png" alt="">
@@ -239,7 +240,7 @@
                                 <h6 class="lead text-uppercase bold">Commitement to quality </h6>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <div class="singleService">
                                 <div class="serImg">
                                     <img src="images/services/6.png" alt="">
@@ -248,16 +249,17 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!--ABOUT END-->
 
                 <!--BLOG START-->
-                <section class="blogSection home_page2" id="services">
+                <section class="wow slideInUp blogSection home_page2" id="services">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-6 noPadding">
+                            <div class="col-sm-6 noPadding wow slideInUp">
                                 <div class="singleBlog">
                                     <div class="blogThumb">
                                         <img src="images/services/maintain.jpg" alt="">
@@ -276,7 +278,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 noPadding">
+                            <div class="col-sm-6 noPadding wow slideInUp">
                                 <div class="singleBlog">
                                     <div class="blogThumb">
                                         <img src="images/services/service.jpg" alt="">
@@ -340,7 +342,7 @@
         <!--OUR WORK END-->
 
         <!--TESTMONIAL START-->
-        <section class="testmonialSec home_page2 overlayw10" id="testmonialSec">
+        <section class="testmonialSec home_page2 overlayw10 wow slideInUp" id="testmonialSec">
             <div class="perelaxBg4"></div>
             <div class="container">
                 <div class="row">
@@ -360,7 +362,7 @@
         <!--TESTMONIAL END-->
 
         <!--CONTACT START-->
-        <section class="contact home_page2" id="contact">
+        <section class="contact home_page2 wow slideInUp" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
