--- a/ar-index.html
+++ b/ar-index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="css/settings.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="css/style.css" >
+        <link rel="stylesheet" type="text/css" href="css/ar.css">
         <link rel="stylesheet" type="text/css" href="css/preset.css" >
         <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <!-- Favicon Icon -->
@@ -41,10 +42,10 @@
                 <div class="row">
                     <div class="col-sm-2 noPaddingLeft">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo-white.svg" alt=""></a>
+                            <a href="ar-index.html"><img src="images/logo-white.svg" alt=""></a>
                         </div>
                         <div class="stickyLogo">
-                            <a href="index.html"><img src="images/logo-dark.svg" alt=""></a>
+                            <a href="ar-index.html"><img src="images/logo-dark.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-10">
@@ -55,12 +56,12 @@
                                 <span></span>
                             </div>
                             <ul>
-                                <li class="scroll active"><a href="index.html">Home</a></li>
+                                <li class="scroll active"><a href="ar-index.html">Home</a></li>
                                 <li class="scroll"><a href="#about">About Us</a></li>
                                 <li class="scroll"><a href="#services">Services</a></li>
-                                <li class="scroll"><a href="career.html">Career</a></li>
+                                <li class="scroll"><a href="ar-career.html">Career</a></li>
                                 <li class="scroll"><a href="#contact">Contact Us</a></li>
-                                <li class="scroll"><a href="ar-index.html">AR</a></li>
+                                <li class="scroll"><a href="index.html">EN</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -84,7 +85,7 @@
                              data-start="1500"
                              data-easing="Power4.easeOut">
                             <div class="revCon">
-                                <h2 class="lead color_white text-center">Enhancing Performance, <br> Ensuring Comfort</h2>
+                                <h2 class="lead color_white text-center">تعزيز الأداء ضمان<br> الراحة</h2>
                             </div>
                         </div>
                     </li>
@@ -99,7 +100,7 @@
                              data-start="1500"
                              data-easing="Power4.easeOut">
                             <div class="revCon">
-                                <h2 class="lead color_white text-center">Enhancing Performance, <br> Ensuring Comfort</h2>
+                                <h2 class="lead color_white text-center">تعزيز الأداء ضمان <br> الراحة</h2>
                             </div>
                         </div>
                     </li>
@@ -127,11 +128,10 @@
                             <div class="testmonial">
                                 <div class="singleTestm">
                                     <div class="teamDeg">
-                                        <h4 class="magenta wow slideInUp" data-wow-duration="0.5s">Who We Are</h4>
+                                        <h4 class="magenta wow slideInUp" data-wow-duration="0.5s">من نحن</h4>
                                     </div>
                                     <p class="wow slideInUp" data-wow-duration="0.5s">
-                                        Welcome to MKAB, your dedicated partner for all your AC maintenance needs. As a premier service provider in the industry, 
-                                        We pride ourselves on delivering top-notch solutions and exceptional customer experiences 
+                                        مرحبًا ، نحن             شريكك المخصص لجميع احتياجات صيانة مكيفات الهواء المركزية و الأعمال الكهربائية الخاصة بك. باعتبارنا المزود الرائد للخدمات في هذه الصناعة، فإننا نفخر بتقديم حلول رفيعة المستوى وتجارب عملاء استثنائية
                                     </p>
                                 </div>
 
@@ -149,7 +149,7 @@
         <!--ABOUT START-->
         <section class="about about2" id="about">
             <div class="abBigtitle home_page2">
-                <h1 class="lead wow slideInUp" data-wow-duration="0.5s">Our Strategy</h1>
+                <h1 class="lead wow slideInUp" data-wow-duration="0.5s">استراتيجيتنا</h1>
             </div>
             <div class="aboutBottom home_page2">
                 <div class="container">
@@ -159,8 +159,7 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <h3 class="light text-center wow slideInUp" data-wow-duration="0.5s">
-                                            The Service Strategy mainly depends on the technical inspection and issuing a report on the status of the devices, 
-                                            and then starting the service work and improving the performance of the devices.
+                                            تعتمد استراتيجية الخدمة بشكل أساسي على الفحص الفني وإصدار تقرير عن حالة الأجهزة ومن ثم البدء بأعمال الخدمة وتحسين أداء الأجهزة.
                                         </h3>
                                     </div>
                                 </div>
@@ -178,7 +177,7 @@
                                 <div class="serImg">
                                     <img src="images/services/1.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Expert Team</h6>
+                                <h6 class="lead text-uppercase bold">فريق خبير</h6>
                             </div>
                         </div>
                         <div class="col-sm-12">
@@ -186,7 +185,8 @@
                                 <div class="serImg">
                                     <img src="images/services/2.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Tailored Solution</h6>
+                                <h6 class="lead text-uppercase bold">حلول محترفة
+                                    ومخصخصة</h6>
                             </div>
                         </div>
                         <div class="col-sm-12">
@@ -194,7 +194,7 @@
                                 <div class="serImg">
                                     <img src="images/services/3.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Professional Work </h6>
+                                <h6 class="lead text-uppercase bold">العمل المهني الاحترافي</h6>
                             </div>
                         </div>
                         <div class="col-sm-12">
@@ -202,7 +202,7 @@
                                 <div class="serImg">
                                     <img src="images/services/4.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Timely Fast Service </h6>
+                                <h6 class="lead text-uppercase bold">الخدمة فى مواعيدها </h6>
                             </div>
                         </div>
                         <div class="col-sm-12">
@@ -210,7 +210,7 @@
                                 <div class="serImg">
                                     <img src="images/services/5.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Commitement to quality </h6>
+                                <h6 class="lead text-uppercase bold">الالتزام بالجودة </h6>
                             </div>
                         </div>
                         <div class="col-sm-12">
@@ -218,7 +218,7 @@
                                 <div class="serImg">
                                     <img src="images/services/6.png" alt="">
                                 </div>
-                                <h6 class="lead text-uppercase bold">Customer satisfaction </h6>
+                                <h6 class="lead text-uppercase bold">رضا العملاء</h6>
                             </div>
                         </div>
                     </div>
@@ -238,14 +238,15 @@
                                         <img src="images/services/maintain.jpg" alt="">
                                     </div>
                                     <div class="blogDec">
-                                        <h2 class="blogTitle"><a href="#">Maintenance Programs</a></h2>
+                                        <h2 class="blogTitle"><a href="#">برامج الصيانة</a></h2>
                                         <div class="bperaDiv">
                                             <ul class="p-0">
-                                                <li>Preventive Maintenance Contract</li>
-                                                <li>Periodic Maintence contract</li>
-                                                <li>Emergency Maintenance and <br>
-                                                Operational Contract</li>
-                                            <li>Enhance performance Service</li>
+                                                <li>عقد الصيانة الوقائية</li>
+                                                <li>عقد الصيانة الدورية</li>
+                                                <li>إصلاح الأعطال الطارئة
+                                                        وعقود التشغيل
+                                               </li>
+                                            <li>برامج تحسين الاداء</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -257,14 +258,14 @@
                                         <img src="images/services/service.jpg" alt="">
                                     </div>
                                     <div class="blogDec">
-                                        <h2 class="blogTitle"><a href="#">Service Benefits</a></h2>
+                                        <h2 class="blogTitle"><a href="#">فوائد الخدمة</a></h2>
                                         <div class="bperaDiv">
                                             <ul class="p-0">
-                                                <li>Improve Device Performance</li>
-                                                <li>Reduce Breakdowns</li>
-                                                <li>Increases Safety while using devices</li>
-                                                <li>Reduce Electrical Energy Consumption</li>
-                                                <li>Extend life of the devices</li>
+                                                <li>تحسين اداء الجهاز</li>
+                                                <li>التقليل من الاعطال الطارئة</li>
+                                                <li>يزيد من السلامة أثناء استخدام الاجهزة</li>
+                                                <li>تقليل استهلاك الطاقة الكهربائية</li>
+                                                <li>إطالة عمر الأجهزة</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -322,10 +323,7 @@
                     <div class="col-lg-12">
                         <div id="testmonialCaro" class="home_page2">
                             <div class="singleTestmn" style="width: 100% !important;">
-                                <p>Whether you require routine maintenance, emergency repairs, or
-                                    system upgrades, MKAB is here to meet your needs and exceed
-                                    your expectations. Experience the difference with our reliable,
-                                    professional, and affordable services.</p>
+                                <p>سواء كنت تحتاج إلى صيانة روتينية، أو إصلاحات طارئة، أو ترقيات للنظام، فنحن MKAB هنا لتلبية احتياجاتك وتجاوز توقعاتك. اكتشف الفرق مع خدماتنا الموثوقة والمهنية وبأسعار معقولة.</p>
                             </div>
                         </div>
                     </div>
@@ -396,11 +394,11 @@
                             <div class="textWidget">
                                 <div class="flogow">
                                     <div class="flogo">
-                                        <a href="index.html"><img src="images/logo-dark.svg" alt=""></a>
+                                        <a href="ar-index.html"><img src="images/logo-dark.svg" alt=""></a>
                                     </div>
                                 </div>
                                 <h3 class="widgetTitle">About <b>MKAB</b></h3>
-                                <p>Welcome to MKAB, your dedicated partner for all your AC maintenance needs.</p>
+                                <p>مرحبًا ، نحن             شريكك المخصص لجميع احتياجات صيانة مكيفات الهواء المركزية و الأعمال الكهربائية الخاصة بك. باعتبارنا</p>
                                 <div class="socialIcon">
                                     <a class="fb" href="#"><i class="fa fa-facebook"></i></a>
                                     <a class="tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -421,8 +419,8 @@
                                     </form>
                                 </div>
                                 <div class="fooInfo">
-                                    <p><i class="flaticon-pin"></i><b>Head office:</b> 2494 Prince Talal, 8799 Ash Shifa Dist. 
-                                        Dammam – 32236  Kingdom of Saudi Arabia </p>
+                                    <p><i class="flaticon-pin"></i><b>Head office:</b> ٢٤٩٤ الامير طلال, حى الشفاء ٨٧٩٩
+                                        الدمام، المملكة العربية السعودية</p>
                                     <p><i class="flaticon-technology"></i><b>+966 0533714316</b></p>
                                     <p><i class="fa fa-envelope"></i><b>info@mkab-sa.com </b></p>
                                 </div>
