--- a/ar-career.html
+++ b/ar-career.html
@@ -57,11 +57,11 @@
                             </div>
                             <ul>
                                 <li class="scroll active"><a href="ar-index.html">Home</a></li>
-                                <li class="scroll"><a href="#about">About Us</a></li>
-                                <li class="scroll"><a href="#services">Services</a></li>
+                                <li class="scroll"><a href="ar-index.html#about">About Us</a></li>
+                                <li class="scroll"><a href="ar-index.html#services">Services</a></li>
                                 <li class="scroll"><a href="ar-career.html">Career</a></li>
-                                <li class="scroll"><a href="#contact">Contact Us</a></li>
-                                <li class="scroll"><a href="ar-career.html">EN</a></li>
+                                <li class="scroll"><a href="ar-index.html#contact">Contact Us</a></li>
+                                <li class="scroll"><a href="career.html">EN</a></li>
                             </ul>
                         </nav>
                     </div>
