--- a/career.html
+++ b/career.html
@@ -56,10 +56,10 @@
                             </div>
                             <ul>
                                 <li class="scroll active"><a href="index.html">Home</a></li>
-                                <li class="scroll"><a href="#about">About Us</a></li>
-                                <li class="scroll"><a href="#services">Services</a></li>
+                                <li class="scroll"><a href="index.html#about">About Us</a></li>
+                                <li class="scroll"><a href="index.html#services">Services</a></li>
                                 <li class="scroll"><a href="career.html">Career</a></li>
-                                <li class="scroll"><a href="#contact">Contact Us</a></li>
+                                <li class="scroll"><a href="index.html#contact">Contact Us</a></li>
                                 <li class="scroll"><a href="ar-career.html">AR</a></li>
                             </ul>
                         </nav>
