--- a/career.html
+++ b/career.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="css/settings.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="css/style.css" >
+        <link rel="stylesheet" type="text/css" href="css/ar.css">
         <link rel="stylesheet" type="text/css" href="css/preset.css" >
         <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <!-- Favicon Icon -->
@@ -55,12 +56,16 @@
                                 <span></span>
                             </div>
                             <ul>
-                                <li class="scroll active"><a href="index.html">Home</a></li>
-                                <li class="scroll"><a href="index.html#about">About Us</a></li>
-                                <li class="scroll"><a href="index.html#services">Services</a></li>
-                                <li class="scroll"><a href="career.html">Career</a></li>
-                                <li class="scroll"><a href="index.html#contact">Contact Us</a></li>
-                                <li class="scroll"><a href="ar-career.html">AR</a></li>
+                                <li class="scroll"><a href="index.html">المنزل</a></li>
+                                <li class="scroll"><a href="index.html#about">معلومات عنا</a></li>
+                                <li class="scroll"><a href="index.html#services">خدماتنا</a></li>
+                                <li class="scroll active"><a href="career.html">وظائف</a></li>
+                                <li class="scroll"><a href="index.html#contact">تواصل معنا</a></li>
+                                <li class="scroll">
+                                    <a href="en-career.html">
+                                        <img src="images/en.png" style="width:25px; margin-left: 8px;">EN
+                                    </a>
+                            </li>
                             </ul>
                         </nav>
                     </div>
@@ -71,49 +76,48 @@
 
 
 <section class="career-main">
-    <h2>Career</h2>
+    <h2>وظائف</h2>
 </section>
 <section class="career-form">
   <div class="container">
     <form class="form-apply">
-        <h2>Lorem lipsum dummy text</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi aperiam illum officiis nihil laudantium consectetur consequatur, cum saepe eos quidem ipsum, vero quam minus omnis quos, et veniam cumque possimus!</p>
+        <h2>هل تريد الانضمام إلى فريقنا؟</h2>
         <div class="row" style="margin-top: 50px; width: 100%;">
             <div class="form-group col-md-6">
-                <label for="exampleFormControlInput1">Full Name*</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Full Name">
+                <label for="exampleFormControlInput1">الاسم الكامل*</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="الاسم الكامل">
               </div>
               <div class="form-group col-md-6">
-                  <label for="exampleFormControlInput1">Email*</label>
+                  <label for="exampleFormControlInput1">عنوان البريد الإلكتروني*</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="form-group col-md-6">
-                  <label for="exampleFormControlInput1">Mobile*</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+966">
+                  <label for="exampleFormControlInput1">رقم التليفون*</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
               </div>
               <div class="form-group col-md-6">
-                  <label for="exampleFormControlInput1">Job Titile*</label>
+                  <label for="exampleFormControlInput1">مسمى وظيفي*</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Designer">
               </div>
               <div class="form-group col-md-12">
-                <label for="exampleFormControlTextarea1">Job Description</label>
+                <label for="exampleFormControlTextarea1">رسالة</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Description"></textarea>
               </div>
               <div class="form-group col-md-12">
-                <label for="exampleFormControlTextarea1">Attach CV*</label>
-                  <label for="file" class="sr-only">File</label>
+                <label for="exampleFormControlTextarea1">أرفق ملف*</label>
+                  <label for="file" class="sr-only">حدد ملف</label>
                   <div class="input-group">
-                    <input type="text" name="filename" class="form-control" placeholder="No file selected" readonly>
+                    <input type="text" name="filename" class="form-control" placeholder="لا يوجد ملف مرفق" readonly>
                     <span class="input-group-btn">
                       <div class="btn btn-default  custom-file-uploader">
                         <input type="file" name="file" onchange="this.form.filename.value = this.files.length ? this.files[0].name : ''" />
-                        Select a file
+                        حدد ملف
                       </div>
                     </span>
                   </div>
             </div>
             <div class="form-group col-md-12">
-               <button type="button" class="btn btn-primary">Upload Now</button>
+               <button type="button" class="btn btn-primary">ارسل الان</button>
             </div>
         </div>
       </form>
@@ -132,8 +136,8 @@
                                         <a href="index.html"><img src="images/logo-dark.svg" alt=""></a>
                                     </div>
                                 </div>
-                                <h3 class="widgetTitle">About <b>MKAB</b></h3>
-                                <p>Welcome to MKAB, your dedicated partner for all your AC maintenance needs.</p>
+                                <h3 class="widgetTitle">عن  <b>MKAB</b></h3>
+                                <p>مرحبًا ، نحن             شريكك المخصص لجميع احتياجات صيانة مكيفات الهواء المركزية و الأعمال الكهربائية الخاصة بك. باعتبارنا</p>
                                 <div class="socialIcon">
                                     <a class="fb" href="#"><i class="fa fa-facebook"></i></a>
                                     <a class="tw" href="#"><i class="fa fa-twitter"></i></a>
@@ -146,16 +150,16 @@
                     <div class="col-sm-6">
                         <aside class="widget">
                             <div class="newsletterwid">
-                                <h3 class="widgetTitle">Newsletter <b>Signup</b></h3>
+                                <h3 class="widgetTitle">النشرة الإخبارية</b></h3>
                                 <div class="newsletter">
-                                    <form action="#" method="post" id="subscriptForm">
-                                        <input type="email" name="sub_email" id="sub_email" placeholder="Enter your email address.">
-                                        <input type="submit" name="sub_submit" id="sub_submit" value="SUBSCRIBE">
+                                    <form action="#" method="post">
+                                        <input type="email" name="sub_email" id="sub_email" placeholder="أدخل عنوان بريدك الالكتروني">
+                                        <input type="submit" name="sub_submit" id="sub_submit" value="اشترك">
                                     </form>
                                 </div>
                                 <div class="fooInfo">
-                                    <p><i class="flaticon-pin"></i><b>Head office:</b> 2494 Prince Talal, 8799 Ash Shifa Dist. 
-                                        Dammam – 32236  Kingdom of Saudi Arabia </p>
+                                    <p><i class="flaticon-pin"></i><b>المكتب الرئيسي:</b> ٢٤٩٤ الامير طلال, حى الشفاء ٨٧٩٩
+                                        الدمام، المملكة العربية السعودية</p>
                                     <p><i class="flaticon-technology"></i><b>+966 0533714316</b></p>
                                     <p><i class="fa fa-envelope"></i><b>info@mkab-sa.com </b></p>
                                 </div>
@@ -172,29 +176,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <p class="copyPera">&COPY; 2024 All Rights Reserved MKAB</p>
+                        <p class="copyPera">&COPY; 2024 جميع الحقوق محفوظة</p>
                     </div>
                 </div>
             </div>
         </section>
         <!--COPY RIGHT END-->
-
-        <div class="subscriptionSuccess">
-            <div class="subsNotice">
-                <i class="fa fa-thumbs-o-up closers"></i>
-                <div class="clearfix"></div>
-                <p class="closers">Subscription Request Successfully placed!</p>
-            </div>
-        </div>
-        <div class="contactSuccess">
-            <div class="consNotice">
-                <i class="fa fa-thumbs-o-up closers"></i>
-                <div class="clearfix"></div>
-                <p class="closers">Your Message successfully sent!</p>
-            </div>
-        </div>
-
-
         <a id="backToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
 
         <!-- ALL JS -->
