--- a/en-career.html
+++ b/en-career.html
@@ -18,7 +18,6 @@
         <link rel="stylesheet" type="text/css" href="css/settings.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="css/style.css" >
-        <link rel="stylesheet" type="text/css" href="css/ar.css">
         <link rel="stylesheet" type="text/css" href="css/preset.css" >
         <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <!-- Favicon Icon -->
@@ -42,10 +41,10 @@
                 <div class="row">
                     <div class="col-sm-2 noPaddingLeft">
                         <div class="logo">
-                            <a href="ar-index.html"><img src="images/logo-white.svg" alt=""></a>
+                            <a href="en-index.html"><img src="images/logo-white.svg" alt=""></a>
                         </div>
                         <div class="stickyLogo">
-                            <a href="ar-index.html"><img src="images/logo-dark.svg" alt=""></a>
+                            <a href="en-index.html"><img src="images/logo-dark.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-10">
@@ -56,12 +55,16 @@
                                 <span></span>
                             </div>
                             <ul>
-                                <li class="scroll active"><a href="ar-index.html">Home</a></li>
-                                <li class="scroll"><a href="ar-index.html#about">About Us</a></li>
-                                <li class="scroll"><a href="ar-index.html#services">Services</a></li>
-                                <li class="scroll"><a href="ar-career.html">Career</a></li>
-                                <li class="scroll"><a href="ar-index.html#contact">Contact Us</a></li>
-                                <li class="scroll"><a href="career.html">EN</a></li>
+                                <li class="scroll"><a href="en-index.html">Home</a></li>
+                                <li class="scroll"><a href="en-index.html#about">About Us</a></li>
+                                <li class="scroll"><a href="en-index.html#services">Services</a></li>
+                                <li class="scroll active"><a href="en-career.html">Career</a></li>
+                                <li class="scroll"><a href="en-index.html#contact">Contact Us</a></li>
+                                <li class="scroll">
+                                    <a href="career.html">
+                                        <img src="images/ar.png" style="width:30px;"> AR
+                                    </a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -77,8 +80,7 @@
 <section class="career-form">
   <div class="container">
     <form class="form-apply">
-        <h2>Lorem lipsum dummy text</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi aperiam illum officiis nihil laudantium consectetur consequatur, cum saepe eos quidem ipsum, vero quam minus omnis quos, et veniam cumque possimus!</p>
+        <h2>Want to join our team ?</h2>
         <div class="row" style="margin-top: 50px; width: 100%;">
             <div class="form-group col-md-6">
                 <label for="exampleFormControlInput1">Full Name*</label>
@@ -90,7 +92,7 @@
               </div>
               <div class="form-group col-md-6">
                   <label for="exampleFormControlInput1">Mobile*</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+966">
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
               </div>
               <div class="form-group col-md-6">
                   <label for="exampleFormControlInput1">Job Titile*</label>
@@ -130,7 +132,7 @@
                             <div class="textWidget">
                                 <div class="flogow">
                                     <div class="flogo">
-                                        <a href="ar-index.html"><img src="images/logo-dark.svg" alt=""></a>
+                                        <a href="en-index.html"><img src="images/logo-dark.svg" alt=""></a>
                                     </div>
                                 </div>
                                 <h3 class="widgetTitle">About <b>MKAB</b></h3>
@@ -147,7 +149,7 @@
                     <div class="col-sm-6">
                         <aside class="widget">
                             <div class="newsletterwid">
-                                <h3 class="widgetTitle">Newsletter <b>Signup</b></h3>
+                                <h3 class="widgetTitle">Newsletter</h3>
                                 <div class="newsletter">
                                     <form action="#" method="post" id="subscriptForm">
                                         <input type="email" name="sub_email" id="sub_email" placeholder="Enter your email address.">
