--- a/career.html
+++ b/career.html
@@ -92,7 +92,7 @@
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="form-group col-md-6">
-                  <label for="exampleFormControlInput1">رقم التليفون*</label>
+                  <label for="exampleFormControlInput1">رقم الجوال *</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
               </div>
               <div class="form-group col-md-6">
