--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <div class="contactInner">
-                            <h3 class="magenta light">لديك سؤال؟ أو قل مرحباً فقط!</h3>
+                            <h3 class="magenta light">لديك أي استفسارات أو ملاحظات ؟ قدمها في الأسفل </h3>
                             <div class="contactForm">
                                 <form action="#" method="post">
                                     <div class="row">
@@ -356,7 +356,7 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="single_form home_page2">
-                                                <label for="con_phone">رقم التليفون:</label>
+                                                <label for="con_phone"> رقم الجوال:</label>
                                                 <input type="text" name="con_phone" id="con_phone" class="required">
                                             </div>
                                         </div>
